Vergleich Projekt <-> % !TEX root =

--- a/Intro/c05_Erstes_Dokument.tex
+++ b/Intro/c05_Erstes_Dokument.tex
@@ -93,6 +93,7 @@ Jedes Produkt besteht aus mehreren Kapiteln, die jeweils in einer Datei gespeich
 Jedes Produkt wird als eigenes Dokument übersetzt.
 Es ist aber auch möglich nur einzelne Dateien zu übersetzen, 
 das spart in der Entwurfsphase sehr viel Zeit, da nur ein Dokument übersetzt wird.
+Das ist deutlich einfacher als mit \type{\includeonly} und \type{% !TEX root = } zu arbeiten.
 
 Diese Anleitung ist als Projekt aufgebaut.
 
@@ -113,6 +114,10 @@ Es empfiehlt sich die Dateiarten anhand des Dateinamens zu unterscheiden.
 \startdescription{\type{c}}
   Die einzelnen Kapitel eines Produkts.
 \stopdescription
+
+Es können natürlich auch andere Bezeichnungen gewählt werden,
+z.\,B. \type{A} für Abschnitt bzw. \type{K} für Kapitel und \type{B} für Buch.
+Die Bezeichnungen sollten nur konsistent sein.
 
 \stopsubsection
 
