Overfull hbox beseitigt.

--- a/Intro/c07_Gliederung.tex
+++ b/Intro/c07_Gliederung.tex
@@ -74,7 +74,8 @@ Ein Dokument hat dann z.\,B. folgenden Aufbau:
 
         Dies ist der Test für einen \type{subsubsubsection}. 
         Ab dieser Ebene werden die Abschnitte nicht mehr nummeriert.
-        Das läßt sich jedoch mit dem Befehl \type{\setuphead[subsubsubsection][number=yes]} ändern.
+        Das läßt sich jedoch leicht mit dem Befehl \type{\setuphead[subsubsubsection][number=yes]} ändern.
+        Die entsprechenden Einstellungen finden sich in der Environment-Datei.
 
 
         \startsubsubsubsubsection[
