--- a/Intro/c23_Verweise.tex
+++ b/Intro/c23_Verweise.tex
@@ -14,37 +14,45 @@
   ]
 
 \index{Links}\index{Verweise}
-Anstelle des \type{\label} Befehls gibt man die Referenz in eckigen Klammern bei den Gliederungsbefehlen an. 
-Benutzt man MkIV Syntax, so wird stattdessen eine Referenz in \type{\startsection} Befehl definiert.
-
-Verweise im Text erreicht man mit \type{\label} und \type{\ref}. So
-wurde am Anfang dieses Teils ein Label \type{Beispiele} gesetzt, auf
-welches man mit „siehe Teil {[}Beispiele{]}“ verweisen kann. Alternativ
-kann man mit \type{\pageref} auf die Seite verweise, also „siehe Seite”.
-Das Verweisen klappt auch auf Abschnitte, siehe dazu 
-\in{Abschnitt}[Verweise] auf \at{Seite}[Verweise].
+Bei Gliederungselementen kann eine \type{reference} angegeben werden.
+Damit kann man sich später auf dieses Element beziehen.
 
 \starttyping
-\section[whatever]{Who cares}
-... 
-\stoptyping
-
-\starttyping
-\startsection[reference=whatever,title={Who cares}]
-... 
+\startsection[
+  reference=Verweise,
+  title={Verweise}
+  ]
 \stopsection
+% oder
+\section[Verweis2]{Verweis}
 \stoptyping
+
+Eine Reference kann auch im Text auftauchen.
+
+\starttyping
+\reference[label1]{Text}
+\stoptyping
+
 
 Auf die Referenzen kann man mit verschiedenen Befehlen zugreifen:
 
 \starttyping
-\at {page}[other::whatever]
-\in {chapter}[other::whatever]
-\about [other::whatever]
-\goto{location}[other::whatever]
+\at   {Seite}        [Verweise]
+\in   {Kapitel}      [Verweise]
+\about               [Verweise]
+\goto {Nur der Link.}[Verweise]
 \stoptyping
 
-Es ist möglich für jedes Kapitel einen eigenen Namensraum zu schaffen. Somit können Konflikte bei gleiche Referenzen in unterschiedlichen Kapiteln vermieden werden.
+Auf \at{Seite}[Verweise] im \in{Kapitel}[Verweise] mit dem Namen \about[Verweise]. \goto{Nur der Link.}[Verweise]
+
+
+Es ist möglich für jedes Kapitel einen eigenen Namensraum zu schaffen.
+Somit können Konflikte bei gleiche Referenzen in unterschiedlichen Kapiteln vermieden werden.
+
+\starttyping
+\reference[Kapitel1:Einleitung]{Einleitung}
+\reference[Kapitel2:Einleitung]{Einleitung}
+\stoptyping
 
 \stopsection
 
