--- a/Intro/c05_Erstes_Dokument.tex
+++ b/Intro/c05_Erstes_Dokument.tex
@@ -67,7 +67,7 @@ Für alle anderen Einstellungen gibt es den Befehl
 \mainlanguage[de]
 \stoptyping
 
-Dieser sorg dafür, dass statt \quotation{\mainlanguage[en]\labeltext{page}} oder \quotation{\mainlanguage[en]\labeltext{figure}} die richtigen Wörter
+Dieser sorgt dafür, dass statt \quotation{\mainlanguage[en]\labeltext{page}} oder \quotation{\mainlanguage[en]\labeltext{figure}} die richtigen Wörter
 \quotation{\labeltext{page}} und \quotation{\labeltext{figure}} erscheinen.
 
 {Mit dem Befehl
