--- a/Intro/c15_Textformatierungen.tex
+++ b/Intro/c15_Textformatierungen.tex
@@ -66,7 +66,7 @@ Jahrelang konnte man mit TeX erstellte Dokumente sofort an ihrer Schrift erkenne
 Inzwischen können beliebige TrueType-Schriften mit TeX verwendet werden.
 ConTeXt liefert einige Schriften bereits mit, 
 weitere Schriften lassen sich leicht im Verzeichnis \type{/tex/texmf-fonts} 
-im ConTeX Verzeichnis installieren. 
+im ConTeXt Verzeichnis installieren. 
 Diese müssen dann mit dem Befehl \type{mtxrun --script fonts --reload} dem
 System bekanntgemacht werden.
 
@@ -120,7 +120,7 @@ Außerdem lassen sich einige Optionen auswählen:
 \bTR \bTD scale     \eTD \bTD Zahlenwert \eTD \bTD Zeichensatz wird vergrößert oder verkleinert. \eTD \eTR
 \bTR \bTD expansion \eTD \bTD quality \eTD \bTD Buchstaben werden geringfügig verbreitert oder verschmälert. \eTD \eTR
 \bTR \bTD[nr=4] protrusion \eTD \bTD pure \eTD \bTD Einige Satzzeichen hängen komplett über den Rand des Textbereiches. \eTD \eTR
-\bTR                            \bTD punctuation \eTD \bTD Satzeichen hängen teilweise über den Rand des Textbereiches. \eTD \eTR
+\bTR                            \bTD punctuation \eTD \bTD Satzzeichen hängen teilweise über den Rand des Textbereiches. \eTD \eTR
 \bTR                            \bTD alpha \eTD \bTD Buchstabenbreiten werden verändert. \eTD \eTR
 \bTR                            \bTD quality \eTD \bTD alpha und punctuation \eTD \eTR
 \bTR \bTD features \eTD \bTD OpenType feature \eTD \bTD Schriftabhängig \eTD \eTR
