--- a/Intro/c23_Verweise.tex
+++ b/Intro/c23_Verweise.tex
@@ -27,7 +27,7 @@ Damit kann man sich später auf dieses Element beziehen.
 \section[Verweis2]{Verweis}
 \stoptyping
 
-Eine Reference kann auch im Text auftauchen.
+Eine \type{Reference} kann auch im Text auftauchen.
 
 \starttyping
 \reference[label1]{Text}
