--- a/Intro/c35_Fußnoten.tex
+++ b/Intro/c35_Fußnoten.tex
@@ -120,7 +120,7 @@ aufgerufen werden.
 
 \input ward\authornote{Eine normale Fußnote in Originaltext. Mit etwas Text, damit die Seite voll wird. \input ward}
 
-\input ward\translaternote{Eine Fußnote des Übersetzters.
+\input ward\translaternote{Eine Fußnote des Übersetzers.
 Sie benutzt einen anderen Zähler als die \type{\authornode} und wird mit Buchstaben statt Zahlen markiert.}
 \commentnote{Mehr Informationen gibt es in den Endnoten am Ende des Kapitels.}
 
