--- a/Intro/c41_Zitate.tex
+++ b/Intro/c41_Zitate.tex
@@ -39,7 +39,7 @@ Innerhalb der \type{\quotation} kann man mit dem \type{\quote} Befehl eine weite
 Die Anführungszeichen werden abhängig von der Sprache angepasst.
 
 {\language[fr]
-In Französich sieht das dann so aus:
+In Französisch sieht das dann so aus:
 Innerhalb der \type{\quotation} kann man mit dem \type{\quote} Befehl eine weitere Ebene schachteln.
 \quotation{Äußere Rede \quote{Innerer Monolog} und hier wieder außen.}
 }
