Startdocument statt wtitle. (Wolfgang Schuster Email 2018-12-23)

--- a/Intro/prd_intro.tex
+++ b/Intro/prd_intro.tex
@@ -3,12 +3,10 @@
 \project project_intro
 
 \startdocument
-
-\doctitle{Eine kurze Einführung in ConTeXt}
-\author{Axel Kielhorn}
-%\date{}
-
-\maketitle
+  [ title={Eine kurze Einführung in ConTeXt},
+   author={Axel Kielhorn},
+%    date={Heute}
+   ]
 \placecontent
 
 \component [c01_Vorwort]
