Textauswahl als Befehl in {} einschließen (Email Wolfgang Schuster 2018-12-23)

--- a/Intro/c15_Textformatierungen.tex
+++ b/Intro/c15_Textformatierungen.tex
@@ -14,33 +14,38 @@
   ]
 \index{Kursiv}\index{fett}
 In diesem Abschnitt sollen verschiedenen Textformatierungen ausprobiert
-werden.
+werden. 
+Die Befehle ändern den nachfolgenden Text.
+Sie müssen daher mit dem Text in \type{{}} eingeschlossen werden.
 
 \startitemize
 \item
-  hervorgehoben: \type{\em} {\em hervorgehoben}
+  hervorgehoben: \type{{\em }} {\em hervorgehoben}
 \item
-  fett: \type{\bf} {\bf fett}
+  fett: \type{{\bf }} {\bf fett}
 \item
-  kursiv: \type{\em} {\em kursiv}
+  kursiv: \type{{\em }} {\em kursiv}
 \item
-  geneigt: \type{\sl} {\sl geneigt}
+  geneigt: \type{{\sl }} {\sl geneigt}
 \item
-  Sans-Serif: \type{\ss} {\ss Sans Serif}
+  Sans-Serif: \type{{\ss }} {\ss Sans Serif}
 \item
-  Schreibmaschine: \type{\tt} {\tt Schreibmaschine}
+  Schreibmaschine: \type{{\tt }} {\tt Schreibmaschine}
 \item
-  Kapitälchen: \type{\sc} {\sc Kapitälchen}
+  Kapitälchen: \type{{\sc }} {\sc Kapitälchen}
 \item
-  unterstrichen 1: {\underbar alles unterstrichen}
+  unterstrichen 1: \type{{\underbar }} {\underbar alles unterstrichen}
 \item
-  unterstrichen 2: {\underbars Jedes Wort wird einzeln unterstrichen}
+  unterstrichen 2: \type{{\underbars }} {\underbars Jedes Wort wird einzeln unterstrichen}
 \item
-  Oldstyle Ziffern: Normale Ziffern 1234567890 oder mit \type{\os} {\os 1234567890}
+  Oldstyle Ziffern: Normale Ziffern 1234567890 oder mit \type{{\os }} {\os 1234567890}
 
 \stopitemize
 
 Textformatierungen kann man auch blockweise für ganze Absätze nutzen:
+
+{\em Dies ist ein kurzer Absatz {\em mit einem hervorgehobenen Einschub}, 
+der mit \type{\em} hervorgehoben wurde.}
 
 {\bf Dies ist ein kurzer Absatz, der mit \type{\bf} fett gedruckt
 wurde.}
