, hinter {} in startsection.

--- a/Intro/c07_Gliederung.tex
+++ b/Intro/c07_Gliederung.tex
@@ -9,7 +9,7 @@
 \project project_intro
 
 \startsection[reference=gliederung,
-  title={Gliederung}
+  title={Gliederung},
   ]
   
   \index{Section}
@@ -23,7 +23,7 @@
 \starttyping
   \startsection[
     reference=gliederung,
-    title={Gliederung}
+    title={Gliederung},
     ]
     Lorem ipsum dolor
   \stopsection
@@ -55,21 +55,21 @@ Ein Dokument hat dann z.\,B. folgenden Aufbau:
 
   \startsubsection[
     reference=subsection,
-    title={subsection}
+    title={subsection},
     ]
 
     Dies ist der Test für eine \type{subsection}.
 
     \startsubsubsection[
       reference=subsubsection,
-      title={subsubsection}
+      title={subsubsection},
       ]
 
       Dies ist der Test für eine \type{subsubsection}.
 
       \startsubsubsubsection[
         reference=subsubsubsection,
-        title={subsubsubsection}
+        title={subsubsubsection},
         ]
 
         Dies ist der Test für einen \type{subsubsubsection}. 
@@ -80,7 +80,7 @@ Ein Dokument hat dann z.\,B. folgenden Aufbau:
 
         \startsubsubsubsubsection[
           reference= subsubsubsubsection,
-          title={subsubsubsubsection}
+          title={subsubsubsubsection},
           ]
 
           Dies ist der Test für einen \type{subsubsubsubsection}.
