--- a/Intro/c13_Beschreibungslisten.tex
+++ b/Intro/c13_Beschreibungslisten.tex
@@ -10,7 +10,7 @@
 
 \startsection[
   reference=beschreibungslisten,
-  title={Beschreibungslisten}
+  title={Beschreibungslisten},
   ]
 
 Eine Beschreibungsliste ist ähnliche einer Liste, hat anstelle der
