--- a/Intro/c15_Textformatierungen.tex
+++ b/Intro/c15_Textformatierungen.tex
@@ -10,7 +10,7 @@
 
 \startsection[
   reference=textformatierungen,
-  title={Textformatierungen}
+  title={Textformatierungen},
   ]
 \index{Kursiv}\index{fett}
 In diesem Abschnitt sollen verschiedenen Textformatierungen ausprobiert
