--- a/Intro/c17_Textgrößen.tex
+++ b/Intro/c17_Textgrößen.tex
@@ -10,7 +10,7 @@
 
 \startsection[
   reference=textgrößen,
-   title={Textgrößen}
+   title={Textgrößen},
   ]
 
 Als nächstes sollen verschiedene Textgrößen ausprobiert werden.
