--- a/Intro/c21_Textausrichtung.tex
+++ b/Intro/c21_Textausrichtung.tex
@@ -10,7 +10,7 @@
 
 \startsection[
   reference=textausrichtung,
-  title={Textausrichtung}
+  title={Textausrichtung},
   ]
 
 In manchen Fällen ist es sinnvoll, Text nicht -- wie in ConTeXt üblich --
