--- a/Intro/c23_Verweise.tex
+++ b/Intro/c23_Verweise.tex
@@ -10,7 +10,7 @@
 
 \startsection[
   reference=Verweise,
-  title={Verweise}
+  title={Verweise},
   ]
 
 \index{Links}\index{Verweise}
@@ -20,7 +20,7 @@ Damit kann man sich später auf dieses Element beziehen.
 \starttyping
 \startsection[
   reference=Verweise,
-  title={Verweise}
+  title={Verweise},
   ]
 \stopsection
 % oder
