--- a/Intro/c27_Tabellen.tex
+++ b/Intro/c27_Tabellen.tex
@@ -10,7 +10,7 @@
 
 \startsection[
   reference=Tabellen,
-  title={Tabellen}
+  title={Tabellen},
   ]
 \index{Tabellen}
 Es gibt mehrere Möglichkeiten in ConTeXt Tabellen zu erzeugen.
@@ -38,7 +38,7 @@ Extreme Tabellen (extreme tables) weitgehend kompatibel mit natürlichen Tabelle
 
 \startsubsection[
   reference=Tabulate,
-  title={Tabulate}
+  title={Tabulate},
   ]
 \index{Tabulate}
 Mit der \type{tabulate} Umgebung lassen sich einfache Tabellen leicht erstellen.
@@ -167,7 +167,7 @@ der über die folgenden Tabellenteile gesetzt wird.
 
 \startsubsection[
   reference=TABLE,
-  title={TABLE}
+  title={TABLE},
   ]
 \index{TABLE}
 
