--- a/Intro/c33_Chemie.tex
+++ b/Intro/c33_Chemie.tex
@@ -10,7 +10,7 @@
 
 \startsection[
   reference=chemie,
-  title={Chemie}
+  title={Chemie},
   ]
 \index{Chemie}
 Zur Eingabe chemischer Formeln benutzt man den \type{\chemical} Befehl.
