--- a/Intro/c37_Eigene_Befehle.tex
+++ b/Intro/c37_Eigene_Befehle.tex
@@ -11,6 +11,6 @@
 
 \startsection[
   reference=eigene-befehle-und-umgebungen,
-  title={Eigene Befehle und Umgebungen}
+  title={Eigene Befehle und Umgebungen},
   ]
 
