--- a/Intro/c39_Grafiken.tex
+++ b/Intro/c39_Grafiken.tex
@@ -10,7 +10,7 @@
 
 \startsection[
   reference=Grafiken,
-  title={Grafiken}
+  title={Grafiken},
   ]
 \index{Bilder}\index{Grafik}
 Bilder werden mit dem Befehl \type{\externalfigure} eingebunden. 
