--- a/Intro/c41_Zitate.tex
+++ b/Intro/c41_Zitate.tex
@@ -11,7 +11,7 @@
 
 \startsection[
   reference=zitate,
-  title={Zitate}
+  title={Zitate},
   ]
 \index{Zitate}\index{Anführungszeichen}
 Längere Zitate werden in einer \type{blockquote} Umgebung gesetzt.
