--- a/Intro/c43_Literatur.tex
+++ b/Intro/c43_Literatur.tex
@@ -10,7 +10,7 @@
 
 \startsection[
   reference=Literatur,
-  title={Literaturverwaltung}
+  title={Literaturverwaltung},
   ]
 
 Es steht geschrieben, aber wo?
