--- a/Intro/c45_Trennungen.tex
+++ b/Intro/c45_Trennungen.tex
@@ -10,7 +10,7 @@
 
 \startsection[
   reference=trennungen,
-  title={Trennungen}
+  title={Trennungen},
   ]
 
 Auch wenn der Trennalgorithmus von TeX nicht schlecht ist, gibt es
