--- a/Intro/c49_Ausblick.tex
+++ b/Intro/c49_Ausblick.tex
@@ -10,7 +10,7 @@
 
 \startsection[
   reference=Ausblick,
-  title={Ausblick}
+  title={Ausblick},
   ]
 
 \startsubsection[title={Registerhaltiger Satz}]
