--- a/Intro/c51_Verzeichnisse.tex
+++ b/Intro/c51_Verzeichnisse.tex
@@ -10,7 +10,7 @@
 
 \startsection[
   reference=verzeichnisse,
-  title={Verzeichnisse}
+  title={Verzeichnisse},
   ]
 
 \startsubsection[title={Abbildungsverzeichnis}]
