--- a/Intro/prd_intro.tex
+++ b/Intro/prd_intro.tex
@@ -5,7 +5,7 @@
 \startdocument
   [ title={Eine kurze Einführung in ConTeXt},
    author={Axel Kielhorn},
-%    date={Heute}
+%    date={Heute},
    ]
 \placecontent
 
