--- a/Intro/c25_Links.tex
+++ b/Intro/c25_Links.tex
@@ -10,7 +10,7 @@
 
 \startsection[
   reference=links,
-  title={Links}
+  title={Links},
   ]
 \index{Links}
 Für Hyperlinks ist kein zusätzliches Paket erforderlich, das Dokument muss lediglich mit
