Tabulate: Leerzeile mit \TB.

--- a/Intro/c27_Tabellen.tex
+++ b/Intro/c27_Tabellen.tex
@@ -104,6 +104,7 @@ Bei wiederholten Tabellenköpfen sollten jedoch \type{\FL} und \type{\LL} benutz
 \NC \type{\FL}  \NC Erste Linie \NR\FL
 \NC \type{\ML}  \NC Mittlere Linie \NR\ML
 \NC \type{\TL}  \NC Untere Linie \NR\TL
+\NC \type{\TB}  \NC Leerzeile (optionale Höhe in \type{[]} angeben)  \NR\TB
 \NC \type{\BL}  \NC Letzte Linie \NR\BL
 \NC \type{\LL}  \NC Letzte Linie (Tabellenkopf)\NR\LL
 \stoptabulate
