--- a/Intro/c31_Einheiten.tex
+++ b/Intro/c31_Einheiten.tex
@@ -164,5 +164,6 @@ ConTeXt kennt auch die abgeleiteten Einheiten
 \unit{1 Joule} = \unit{1 Newton Meter} = \frac{\unit{1 Kilo Gram Meter}}{\unit{Second^2}} \times \unit{1 Meter} = \frac{\unit{1 Kilo Gram Meter^2}}{\unit{Second^2}}
 \stopformula
 
+\stopsection
 \stopcomponent
 
